--- a/suse2022-ns/common/l10n/fr.xml
+++ b/suse2022-ns/common/l10n/fr.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- $Id: fr.xml 43757 2009-08-24 08:14:29Z toms $ -->
 <l:l10n xmlns:l="http://docbook.sourceforge.net/xmlns/l10n/1.0"
         language="fr"
         english-language-name="French">
@@ -7,9 +6,8 @@
    <l:gentext key="LocalisedLanguageName" text="Fran&#231;ais"/>
    <l:gentext key="ListofAuthors" text="Auteurs"/>
    <l:gentext key="Authors"       text="Auteurs"/>
-   <l:gentext key="NOTE" text="REMARQUE"/>
-   <l:gentext key="Note" text="Remarque"/>
-   <l:gentext key="note" text="Remarque"/>
+   <l:gentext key="TableofContents" text="Table des matières" />
+   <l:gentext key="ListofAuthors"   text="Liste des auteurs" />
    <l:gentext key="Contributor"     text="Contributeur"/>
    <l:gentext key="Contributors"    text="Contributeurs"/>
 
@@ -18,20 +16,31 @@
    <l:gentext key="hyphenation-push-character-count" text="4"/>
    <l:gentext key="hyphenation-remain-character-count" text="4"/>
 
-   <l:gentext key="selectlanguage" text="Sélectionner la langue"/>
-   <l:gentext key="selectformat" text="Sélectionner le format"/>
-   <l:gentext key="formathtml" text="Pages Web"/>
-   <l:gentext key="formatsinglehtml" text="Page Web unique"/>
-   <l:gentext key="formatpdf" text="PDF"/>
-   <l:gentext key="formatepub" text="E-Book (EPUB)"/>
-   <l:gentext key="contentsoverview" text="Contenu"/>
-   <l:gentext key="showcontentsoverview" text="Afficher le contenu"/>
-   <l:gentext key="find" text="Rechercher"/>
+   <l:gentext key="selectlanguage" text="Sélectionner une langue" />
+   <l:gentext key="selectformat" text="Sélectionner un format" />
+   <l:gentext key="formathtml" text="Pages Web" />
+   <l:gentext key="formatsinglehtml" text="Page Web unique" />
+   <l:gentext key="formatpdf" text="PDF" />
+   <l:gentext key="formatepub" text="Livre électronique (EPUB)" />
+   <l:gentext key="contentsoverview" text="Table des matières" />
+   <l:gentext key="showcontentsoverview" text="Afficher la table des matières" />
+   <l:gentext key="find" text="Rechercher" />
 
    <l:gentext key="runinhead.default.title.end.punct" text="."/>
 
-   <l:gentext key="navigation" text="Navigation"/>
-   <l:gentext key="sharethispage" text="Partager cette page"/>
+   <l:gentext key="navigation" text="Navigation" />
+   <l:gentext key="moredocuments" text="Plus de documents" />
+
+   <l:gentext key="onthispage" text="Sur cette page" />
+
+   <l:gentext key="givefeedback" text="Formuler des commentaires" />
+   <l:gentext key="reportbug" text="Signaler un problème" />
+   <l:gentext key="editsource" text="Modifier le document source" />
+
+   <l:gentext key="previouspage" text="Précédent" />
+   <l:gentext key="nextpage" text="Suivant" />
+
+   <l:gentext key="sharethispage" text="Partager cette page" />
    <l:gentext key="shareviafacebook" text="Facebook"/>
    <l:gentext key="sharevialinkedin" text="LinkedIn"/>
    <l:gentext key="shareviatwitter" text="Twitter"/>
@@ -39,23 +48,30 @@
    <l:gentext key="printthispage" text="Imprimer cette page"/>
    <l:gentext key="susecareers" text="Carrières"/>
    <l:gentext key="suselegal" text="Mentions légales"/>
-   <l:gentext key="suseabout" text="Infos"/>
+   <l:gentext key="suseabout" text="À propos de" />
    <l:gentext key="susecontact" text="Contactez-nous"/>
    <l:gentext key="version.info" text="S'applique à "/>
-   <l:gentext key="totopofpage" text="Haut"/>
+   <l:gentext key="totopofpage" text="Haut de la page" />
 
    <l:gentext key="version" text="Version"/>
    <l:gentext key="Version" text="Version"/>
 
-   <l:gentext key="step.optional" text="(Optionnelle)"/>
+   <l:gentext key="step.optional" text="(Facultatif)" />
+   <l:gentext key="GlossSeeAlso" text="Reportez-vous également à la section" />
+   <l:gentext key="glossseealso" text="Reportez-vous également à la section" />
+
 
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>
 
    <l:context name="bypass-block">
-     <l:template name="bypass-to-content" text="Passer au contenu"/>
-     <l:template name="bypass-to-nav" text="Passer à la navigation aux pages: page antérieure [touche directe p]/page suivante [touche directe n]"/>
+     <l:template name="bypass-to-content" text="Accéder au contenu" />
+     <l:template name="bypass-to-nav" text="Navigation Accéder à la page : page précédente [raccourci clavier p] / page suivante [raccourci clavier n]" />
+   </l:context>
+
+   <l:context name="glossary">
+     <l:template name="seealso" text="Voir aussi %t." />
    </l:context>
 
    <l:context name="styles">
@@ -182,7 +198,6 @@
       <l:template name="up" text="&#x02191;"/><!-- uarr -->
   </l:context>
 
-
    <l:context name="datetime-full">
       <l:template name="January" text="janvier" lang="fr" />
       <l:template name="February" text="f&#xe9;vrier" lang="fr" />
@@ -204,7 +219,8 @@
    </l:context>
 
    <l:context name="datetime">
-     <l:template name="titlepage.format" text="d/m/Y"/>
+     <l:template name="titlepage.format" text="d b Y"/>
    </l:context>
+
 
 </l:l10n>
