--- a/suse2022-ns/common/l10n/lt_lt.xml
+++ b/suse2022-ns/common/l10n/lt_lt.xml
@@ -13,12 +13,6 @@
 
    <l:gentext key="admonseparator"  text=": "/>
 
-   <!-- In most cases, this has to be empty -->
-   <l:dingbat key="guimenustartquote" text=""/>
-   <l:dingbat key="guimenuendquote" text=""/>
-   <l:dingbat key="startquote" text="&#8222;"/>
-   <l:dingbat key="endquote" text="&#8220;"/>
-
    <l:gentext key="selectlanguage" text="Pasirinkti kalbą"/>
    <l:gentext key="selectformat" text="Pasirinkti formatą"/>
    <l:gentext key="formathtml" text="Tinklalapiai"/>
@@ -32,6 +26,17 @@
    <l:gentext key="runinhead.default.title.end.punct" text="."/>
 
    <l:gentext key="navigation" text="Naršymas"/>
+   <l:gentext key="moredocuments" text="More documents"/>
+
+   <l:gentext key="onthispage" text="On this page"/>
+
+   <l:gentext key="givefeedback" text="Give feedback"/>
+   <l:gentext key="reportbug" text="Report an issue"/>
+   <l:gentext key="editsource" text="Edit source document"/>
+
+   <l:gentext key="previouspage" text="Previous"/>
+   <l:gentext key="nextpage" text="Next"/>
+
    <l:gentext key="sharethispage" text="Bendrinti šį puslapį"/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
    <l:gentext key="sharevialinkedin" text="LinkedIn"/>
@@ -45,6 +50,12 @@
    <l:gentext key="version.info" text="Skirta"/>
    <l:gentext key="totopofpage" text="Viršus"/>
 
+   <!-- In most cases, this has to be empty -->
+   <l:dingbat key="guimenustartquote" text=""/>
+   <l:dingbat key="guimenuendquote" text=""/>
+   <l:dingbat key="startquote" text="&#8222;"/>
+   <l:dingbat key="endquote" text="&#8220;"/>
+   
    <!-- FIXME: Needs translation. -->
    <l:context name="bypass-block">
      <l:template name="bypass-to-content" text="Jump to content"/>
